@@ -9,8 +9,9 @@
 - fixed remaining problems with list selection
 - use more standard way of differentiating between different kinds of
   entries in the list (translated, fuzzy, new) by using font variants
-  instead of different background colors (fixes #1863332)
-- use --omit-header argument to xgettext (fixes #1900222)
+  instead of different background colors (#1863332)
+- use --omit-header argument to xgettext (#1900222)
+- don't update PO-Revision-Date header if it's unused (#1900298)
 
 
 Version 1.3.9
